MILESTONE: Pipe+SurfaceView rendering, Counter APK, TODO app with full lifecycle
Rendering pipeline:
- WestlakeVM.kt: SurfaceView replaces Compose Image, pipe reader with DLST
  magic sync, mutex for single reader, DEX-only app support
- WestlakeActivity.kt: added Tip Calculator and TODO List VM entries
- Long-press shows text input dialog, forwards to VM via file IPC

Shim framework fixes:
- ResourceTable: config-aware filtering (default over qualified variants)
- LayoutInflater: dimension unpacking (dp->px complex format), layout_gravity,
  RelativeLayout attrs mapped to FrameLayout gravity
- DisplayMetrics: density 2.0, 480x800 surface
- Activity: removed 3x layout multiplier, invalidateLayout, always re-layout
- DefaultTheme: high contrast text (white/light gray on dark), min 14sp, EditText fix
- MiniActivityManager: Fragment lifecycle (onActivityCreated), Counter-specific
  fragment handling, ListView populate, activity result delivery with re-render
- ArrayAdapter: built-in simple_list_item_1 (creates TextView directly)
- SharedPreferences: debug logging for getAll/getString
- WestlakeLauncher: package name fallback, Counter pre-seed, DEX-only launch,
  text input via file, render on activity change, findEditText helper

Working apps:
- MockDonalds (custom): scrollable menu, tap navigation
- Counter (Play Store APK): XML layout from APK, +/- buttons, centered count
- Tip Calculator: 5 tip buttons, live recalculation
- TODO List: multi-Activity navigation, startActivityForResult, text input,
  add/remove items, SharedPreferences persistence

A15 ART: documented String constructor hang in A15_IO_FIX_NEEDED.md

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>